--- a/index.html
+++ b/index.html
@@ -97,28 +97,28 @@
             </div>
           </div>
         </article>
-        <article class="card card_sprint1-start">
-          <h2 class="card__heading heading_sprint1-start">
+        <article class="card card_blank-piece">
+          <h2 class="card__heading heading_blank-piece">
             1 спринт: Я — чистый лист
           </h2>
           <div class="card__image">
             <span class="card__label">&lt;/HTML&gt;</span>
             <img
-              class="card__image .filter-invert"
+              class="card__image filter-invert"
               src="images/image.png"
               alt="Парень с ноутбуком на фоне гор, в стиле аниме"
               loading="lazy"
             />
           </div>
-          <div class="card__text-block text-block_sprint1-start">
-            <p class="card__text text_sprint1-start">
+          <div class="card__text-block text-block_blank-piece">
+            <p class="card__text text_blank-piece">
               На первых этапах мы работали со страхами и сомнениями, которые
               часто испытывают новички. Один из них — страх перед чистым листом.
               Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто
               за этим ощущением скрываются более глубокие вопросы: с чего
               начать? а вдруг будет слишком сложно? что, если я не справлюсь?
             </p>
-            <p class="card__text text_sprint1-start">
+            <p class="card__text text_blank-piece">
               Страха перед листом не было, были лишь слабоумие и отвага.
             </p>
             <div class="card__like-container">
@@ -173,8 +173,8 @@
             </div>
           </div>
         </article>
-        <article class="card card_sprint1-end">
-          <h2 class="card__heading heading_sprint1-end">
+        <article class="card card_what-if">
+          <h2 class="card__heading heading_what-if">
             1 спринт: А если не получится?
           </h2>
           <div class="card__image">
@@ -186,13 +186,13 @@
               loading="lazy"
             />
           </div>
-          <div class="card__text-block text-block_sprint1-end">
-            <p class="card__text text_sprint1-end">
+          <div class="card__text-block text-block_what-if">
+            <p class="card__text text_what-if">
               Первый проект — позади! Но это всё ещё самое начало пути. Радость
               могла быстро померкнуть и смениться ожиданием провала. Или вы,
               наоборот, могли вдохновиться успехами и поверить в себя.
             </p>
-            <p class="card__text text_sprint1-end">
+            <p class="card__text text_what-if">
               Путь начался. Осталось понять, куда.
             </p>
             <div class="card__like-container">
@@ -247,8 +247,8 @@
             </div>
           </div>
         </article>
-        <article class="card card_sprint2-start">
-          <h2 class="card__heading heading_sprint2-start">
+        <article class="card card_perfectionism">
+          <h2 class="card__heading heading_perfectionism">
             2 спринт: Погоня за идеалом
           </h2>
           <div class="card__image">
@@ -260,15 +260,15 @@
               loading="lazy"
             />
           </div>
-          <div class="card__text-block text-block_sprint2-start">
-            <p class="card__text text_sprint2-start">
+          <div class="card__text-block text-block_perfectionism">
+            <p class="card__text text_perfectionism">
               На этом этапе вы уже достаточно разбирались в основах вёрстки,
               чтобы понять, как много ещё впереди. Вы могли попытаться погнаться
               за идеалом и понять, что он недостижим. А, может, вы вовсе и не
               подвержены перфекционизму и вместо того, чтобы сделать идеально,
               старались просто сделать.
             </p>
-            <p class="card__text text_sprint2-start">
+            <p class="card__text text_perfectionism">
               Да, перфекционизм — моя ахиллесова пята.
             </p>
             <div class="card__like-container">
@@ -323,8 +323,8 @@
             </div>
           </div>
         </article>
-        <article class="card card_sprint2-end">
-          <h2 class="card__heading heading_sprint2-end">
+        <article class="card card_about-those">
+          <h2 class="card__heading heading_about-those">
             2 спринт: О тех, кто рядом
           </h2>
           <div class="card__image">
@@ -336,8 +336,8 @@
               loading="lazy"
             />
           </div>
-          <div class="card__text-block text-block_sprint2-end">
-            <p class="card__text text_sprint2-end">
+          <div class="card__text-block text-block_about-those">
+            <p class="card__text text_about-those">
               Всё это время вы были не одиноки (хотя, возможно, иногда и
               чувствовали, что одни против целого мира). Вас окружали
               одногруппники, команда сопровождения и просто близкие люди,
@@ -345,7 +345,7 @@
               поддавался. Осваивать что-то новое легче, когда рядом есть
               единомышленники, не правда ли?
             </p>
-            <p class="card__text text_sprint2-end">
+            <p class="card__text text_about-those">
               Ощущение, что я одиноко одинокий одиночка, присутствует.
             </p>
             <div class="card__like-container">
@@ -400,8 +400,8 @@
             </div>
           </div>
         </article>
-        <article class="card card_sprint3-start">
-          <h2 class="card__heading heading_sprint3-start">
+        <article class="card card_strategies">
+          <h2 class="card__heading heading_strategies">
             3 спринт: Обходные стратегии
           </h2>
           <div class="card__image">
@@ -413,13 +413,13 @@
               loading="lazy"
             />
           </div>
-          <div class="card__text-block text-block_sprint3-start">
-            <p class="card__text text_sprint3-start">
+          <div class="card__text-block text-block_strategies">
+            <p class="card__text text_strategies">
               На этом курсе вы постоянно решали разные задачи. В какой-то момент
               вам могло показаться, что решения просто иссякли. Значит, пришло
               время посмотреть на задачу под другим углом.
             </p>
-            <p class="card__text text_sprint3-start">
+            <p class="card__text text_strategies">
               Мы учулись стоять на голове из последних сил.
             </p>
             <div class="card__like-container">
@@ -474,8 +474,8 @@
             </div>
           </div>
         </article>
-        <article class="card card_sprint3-end">
-          <h2 class="card__heading heading_sprint3-end">
+        <article class="card card_when-give-up">
+          <h2 class="card__heading heading_when-give-up">
             3 спринт: Когда опускаются руки
           </h2>
           <div class="card__image">
@@ -487,15 +487,15 @@
               loading="lazy"
             />
           </div>
-          <div class="card__text-block text-block_sprint3-end">
-            <p class="card__text text_sprint3-end">
+          <div class="card__text-block text-block_when-give-up">
+            <p class="card__text text_when-give-up">
               Во время учёбы часто возникает чувство, когда не знаешь, за что
               хвататься. Вроде и проектную пора сдавать, и задачи хочется
               порешать, и в теории получше разобраться, и жизнь не забыть
               пожить. В такие моменты очень нужна концентрация. Вспомните,
               откуда вы её черпали.
             </p>
-            <p class="card__text text_sprint3-end">
+            <p class="card__text text_when-give-up">
               Концентрация рождается в расхождении пикселей.
             </p>
             <div class="card__like-container">
